# cosmogony

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  README.md  awesome.md  build.rs  taginfo.json
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  test-and-publish.yml
cosmogony/: Cargo.toml  README.md
cosmogony/src/: file_format.rs  lib.rs  model.rs  mutable_slice.rs  postcode.rs  read.rs  zone.rs
cosmogony_merger/: Cargo.toml
cosmogony_merger/src/: main.rs
cosmogony_model/: Cargo.toml
cosmogony_model/src/: cosmogony.rs  lib.rs
src/: additional_zones.rs  admin_type.rs  cosmogony.rs  country_finder.rs  file_format.rs  hierarchy_builder.rs  lib.rs  main.rs  merger.rs  model.rs  mutable_slice.rs  postcode.rs  postcode_ext.rs  postcode_service.rs  utils.rs  zone.rs  zone_ext.rs  zone_tree.rs  zone_typer.rs
tests/: cosmogony_libpostal_admin_levels.rs  cosmogony_lux_test.rs  cosmogony_test.rs
tests/data/: gatineau.osm.pbf  ivory-coast.pbf  luxembourg_filtered.osm.pbf  readme.md
