[package]
name = "cosmogony_builder"
version = "0.14.5"
authors = ["Adrien Matissart <a.matissart@qwantresearch.com>", "Antoine Desbordes <antoine.desbordes@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/osm-without-borders/cosmogony"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
cosmogony = { path = "cosmogony" }
env_logger = "0.10.0"
flate2 = "1.0"
geo = "0.26.0"
geojson = { version = "0.24", features = ["geo-types"] }
geos = { version = "8.0", features= ["geo"] }
geo-types = { version = "0.7.9", features = ["rstar"] }
include_dir = "0.7"
itertools = "0.11.0"
lazy_static = "1"
log = "0.4"
osm_boundaries_utils = "0.11.0"
osmpbfreader = "0.16"
rayon = "1.5"
regex = "1"
rstar = "0.11.0"
serde_derive = "1"
serde_json = "1"
serde = { version = "1", features = ["rc"] }
serde_yaml = "0.9"

[dev-dependencies]
approx = "0.5"

[profile.production]
inherits = "release"
lto = "fat"
codegen-units = 1
