[package]
name = "cosmogony"
version = "0.10.3"
authors = ["Adrien Matissart <a.matissart@qwantresearch.com>", "Antoine Desbordes <antoine.desbordes@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/osm-without-borders/cosmogony"
homepage = "http://cosmogony.world"
keywords = ["osm", "boundary", "geography"]
categories = ["science", "algorithms"]
description = "Provides geographical zones with a structured hierarchy"
readme = "README.md"
edition = "2018"

[dependencies]
log = "0.4"
geo-types = { version = "0.7", features = ["use-rstar"] }
geojson = { version = "0.22", features = ["geo-types"] }
serde = {version = "1", features = ["rc"]}
serde_derive = "1"
serde_json = "1"
failure = "0.1"
flate2 = "1.0"
osmpbfreader = "0.14"
