[package]
name = "cosmogony"
version = "0.14.3"
authors = ["Adrien Matissart <a.matissart@qwantresearch.com>", "Antoine Desbordes <antoine.desbordes@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/osm-without-borders/cosmogony"
homepage = "http://cosmogony.world"
keywords = ["osm", "boundary", "geography"]
categories = ["science", "algorithms"]
description = "Provides geographical zones with a structured hierarchy"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
geojson = { version = "0.22", features = ["geo-types"] }
geo-types = { version = "0.7.9", features = ["use-rstar"] }
log = "0.4"
osmpbfreader = "0.16"
serde_derive = "1"
serde_json = "1"
serde = {version = "1", features = ["rc"]}
