[package]
name = "cosmogony_merger"
version = "0.1.0"
authors = ["antoine-de <antoine.desbordes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmogony = "0.8.1"
structopt = "0.2"
structopt-derive = "0.1"
failure = "0.1.8"
env_logger = "0.7.1"
log = "0.4.11"
serde_json = "1.0.59"
flate2 = "1.0.18"
